Move changes from Android app to Java app