@@ -4,6 +4,7 @@ import Models.NodeData.Node;
 import Models.NodeData.Option;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class Step {
@@ -26,6 +27,10 @@ public class Step {
     public Step(Node node, String nextNodeId) {
         this.node = node;
         // If there's only one option, create a dummy 'next' option for the user to navigate
-        this.userOptions = List.of(new Node("Next", new Option(nextNodeId)));
+        this.userOptions = Collections.singletonList(new Node("Next", new Option(nextNodeId)));
+    }
+
+    public boolean isUserChoice() {
+        return this.userOptions.size() > 1 && !this.node.isChanceChoice();
     }
 }
